--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,4 @@
-footer{
+#contact{
     display: flex;
     flex-direction: column;
 }
@@ -23,7 +23,7 @@ iframe{
     z-index: 1;
 }
 
-.formulaire{
+#formulaire{
     background-color: gray;
     margin: auto;
     padding: 10%;
