--- a/sass/style.css
+++ b/sass/style.css
@@ -221,9 +221,21 @@ iframe {
 }
 
 #formulaire {
-  background-color: gray;
-  margin: auto;
+  background-color: #b3b3b3;
+  margin: 30px auto;
   padding: 10%;
+  font-family: 'Montserrat';
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.table__form {
+  margin-bottom: 20px;
 }
 
 input[type=text], textarea {
@@ -231,6 +243,12 @@ input[type=text], textarea {
 }
 
 input[type=submit] {
-  background: #5CABD1;
+  color: gold;
+  background: #177aa8;
+  font-weight: bold;
+  width: auto;
+  margin: auto;
+  font-size: 25px;
+  border-radius: 5%;
 }
 /*# sourceMappingURL=style.css.map */
